<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Principal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/habitacion" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/txtEmalLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/users"
                android:drawablePadding="5dp"
                android:fontFamily="monospace"
                android:hint="@string/emailLogin"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/txtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:drawablePadding="5dp"
                android:hint="@string/passwordLogin"
                android:fontFamily="monospace"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/botones"
            android:text="Iniciar Sesion"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonIniciarSesionGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botong"
            android:drawableStart="@drawable/google"
            android:drawablePadding="15dp"
            android:text="@string/ingresarGoogle" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botones"
            android:text="Registrar" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>